Fixed bg image not showing and calendar default view

--- a/src/modules/home/components/homePage.css
+++ b/src/modules/home/components/homePage.css
@@ -7,7 +7,7 @@
 }
 
 .hero {
-  background: url('./bg.png') no-repeat center center/cover;
+  background: no-repeat center center/cover;
   height: 100vh;
   width: 100vw;
   display: flex;
